assets/styles/styles.css
html, body {
    margin-top: 2%;
    margin-left: 4%;
    margin-right: 4%;

    animation: fadeInLanding 1s ease-in 0s;
    background-color: #f9f9f9;

    scroll-behavior: smooth;
}

/********** FONTS **********/

html {
    font-family: 'Inter', sans-serif;
    font-weight: 300;
    font-size: 16px;
    line-height: 1.8;
    color: #333;

    scroll-behavior: smooth;
}

b {
    font-weight: 300;
    font-style: italic;
}

b:hover {
    text-decoration: line-through;
}

a {
    text-decoration: none;
    color: black;
}

p {
    font-weight: 500;
}

.bold {
    font-weight: 500;
}

.caption {
    text-align: center;

    opacity: 40%;
}

/********** NAVBAR **********/

.home {
    font-size: 14px;
    font-weight: 700;
}

.menu {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.side {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.navTitle {
    letter-spacing: 1px;
    font-size: 14px;
}

.navTitleLanding {
    letter-spacing: 1px;
    font-size: 14px;

    border-bottom: 1px solid black;
}

.navTitle:hover {
    font-size: 14px;
    letter-spacing: 1px;

    border-bottom: 1px solid black;
}

.sideBlanknav {
    width: 30px;
}

.nav {
    margin-top: 2%;
    margin-bottom: 10%;
}

label {
    margin: 0 40px 0 0;
    font-size: 26px;
    line-height: 70px;
    display: none;
    width: 26px;
    float: right;
}

#toggle {
    display: none;
}

/********** INDEX **********/
#masthead {
    margin-top: 14%;
    margin-right: 30%;
    margin-bottom: 14%;
}

.masthead1 {
    font-family: 'Fahkwang', sans-serif;
    font-weight: 200;
    font-size: 30px;
    letter-spacing: 1px;
    margin-bottom: 10%;
}

#mastheadPlay {
    margin-top: 10%;
}

.masthead3 {
    font-family: 'Fahkwang', sans-serif;
    font-weight: 200;
    font-size: 30px;
    letter-spacing: 1px;
    margin-bottom: 5%;
}

.masthead2 {
    display: flex;
    flex-direction: row;
    align-content: center;
}

.words {
    font-size: 14px;
    letter-spacing: 1px;
    padding-left: 2%;
    padding-top: 4%;
}

.point {
    animation: upDown 1s ease-in-out 0s infinite alternate;
}

.point img {
    width: 50px;
}

/***** This is the grid (for index)******/

#showcase {
    margin-top: 10%;
}

#work {
    margin-top: 4%;
    margin-bottom: 10%;
}

.number {
    width: 20%;
}

.detail {
    width: 70%;
}

h2 {
    font-family: 'Fahkwang', sans-serif;
    font-weight: 200;
    font-size: 30px;
    letter-spacing: 1px;
    line-height: 0;

    padding-top: 2%;
}

/***** Zoom in case images when hovering *****/

.image-box {
    overflow: hidden;
    margin: auto;
}

.image-box img {
    max-width: 100%;
    transition: all 2.0s;
    display: block;
    width: 100%;
    height: auto;
    transform: scale(1);
}

.image-box:hover img {
    transform: scale(1.2);
}

/***** This is the grid (for graphics)******/

#columns {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.blank {
    width: 80%;
}

#showcaseWork {
    margin-top: 100px;
}

.item img {
    width: 4000px;
    max-width: 100%;
}

.item {
    margin-bottom: 100px;
}

h1 {
    font-weight: 300;
    font-size: 24px;
    letter-spacing: 1px;
    line-height: 0;

    padding-top: 2%;
}

/********** ABOUTME CONTENT **********/

#aboutMe1 {
    margin-top: 10%;
}

#aboutMe2 {
    margin-top: 4%;
    margin-bottom: 10%;
}

.aboutHeader {
    font-family: 'Fahkwang', sans-serif;
    font-weight: 200;
    font-size: 30px;
    margin-bottom: 4%;
}

.sectionSubTextHalf1 {
    width: 54%;
}

.sectionSubTextHalf2 {
    width: 80%;
}

.small {
    font-size: 14px;
}

/********** CASE STUDY **********/

/***** Intro section *****/

.tag {
    text-transform: uppercase;
    letter-spacing: 2px;
    text-align: center;
    margin-bottom: 30px;
    font-size: 12px;
}

.imageHeader {
    display: flex;
    justify-content: center;
}

#imageHeader {
    margin-bottom: 200px;
}

.imageHeader img {
    width: 100%;
    max-width: 100%;
}

.titleText {
    font-family: 'Fahkwang', sans-serif;
    font-weight: 200;
    font-size: 30px;

    margin-bottom: 50px;
    text-align: center;
}

#introDetails {
    display: flex;
    flex-direction: row;

    margin-bottom: 200px;
}

.introSubText {
    margin-bottom: 50px;
    font-size: 30px;
    line-height: 1.5;
    width: 90%;
}

.introBlank {
    width: 20%;
}

.introDesc {
    width: 30%;
}

.descCatTitle {
    font-size: 12px;
    letter-spacing: 2px;
    text-transform: uppercase;
    font-weight: 300;
    opacity: 40%;
}

.descCat {
    margin-bottom: 20px;
    font-size: 16px;
}

/***** Case study content *****/

.caption {
    margin-top: 1%;
}

#pageSection {
    margin-bottom: 10%;
}

.pageSectionTitle {
    font-size: 12px;
    letter-spacing: 2px;
    text-transform: uppercase;
    font-weight: 300;
    opacity: 40%;

    margin-bottom: 2%;
}

.sectionText {
    font-size: 30px;
    width: 70%;
    line-height: 1.5;

    margin-bottom: 3%;
}

.sectionTextCenter {
    font-size: 30px;
    line-height: 1.5;
    text-align: center;
}

.sectionTextAll {
    font-size: 30px;
    line-height: 1.5;

    margin-top: 20%;
    margin-bottom: 6%;
}

.sectionTextAllFull {
    font-size: 30px;
    line-height: 1.5;

    margin-bottom: 3%;
}

.sectionSubText {
    width: 60%;
}

.sectionSubTextLong {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.sectionSubTextHalf {
    width: 70%;
}

.sectionSubTextHalfNon {
    width: 50%;
    margin-left: 50%;
}

.item1 {
    display: flex;
    flex-direction: column;

    text-align: center;
}

.item1 img {
    width: 100%;
    max-width: 100%;
}

.divide {
    display: flex;
    flex-direction: row;
}

.sectionText2 {
    font-size: 30px;
    width: 60%;
    line-height: 1.5;

    margin-right: 10%;
}

.mobile video {
    width: 20%;
}

.mobile {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.center {
    margin-left: 25%;
    margin-right: 25%;

    display: flex;
    flex-direction: column;
    align-items: center;
}

.sectionText img {
    width: 100%;
    max-width: 100%;
}

.threeCol {
    display: flex;
    flex-direction: row;
}

.row {
    display: flex;
    flex-direction: row;
    padding-bottom: 6%;
}

.sideBlank {
    width: 140px;
}

.description {
    width: 30%;
    margin-top: 10%;
}

.video {
    width: 70%;
}

/********** FOOTER **********/

#footer {
    padding-top: 10%;
    padding-bottom: 2%;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.copyright {
    letter-spacing: 1px;
    font-size: 14px;
    padding-bottom: 3%;
}

#media {
    display: flex;
    flex-direction: row;
    justify-content: right;
}

.icon {
    letter-spacing: 1px;
    font-size: 14px;
}

.icon a:hover {
    font-size: 14px;
    letter-spacing: 1px;

    border-bottom: 1px solid black;
}

/********** ANIMATIONS **********/

/* It go bouncy bounce */
@keyframes upDown {
    from {
        transform: translateY(0px);
    }
    to {
        transform: translateY(20px);
    }
} 

/* Fade into page once landed */
@keyframes fadeInLanding {
    from {
        opacity: 0%;
    }
    to {
        opacity: 100%
    }
}

/* Fade out when hovering over links (NOT nav and footer links) */

@keyframes fadeOut {
    from {
        opacity: 100%;
    }
    to {
        opacity: 50%
    }
}

/********** RESPONSIVE **********/

/* Use a media query to add a breakpoint at 800px: */

@media screen and (max-width: 800px) {
    /* nav */
    label {
        display: block;
        cursor: pointer;

        float: right;
        margin-bottom: 10%;
    }

    .menu {
        width: 100%;
        display: none;
    }

    .menu a {
        display: block;
        margin: 5px;

        font-weight: 300;
    }

    .navTitleLand:hover {
        font-weight: 300;
    }

    #toggle:checked + .menu {
        display: flex;
    }

    /* index.html */
    #content, #columns, #showcaseWork {
      width: 100%;
      
      display: flex;
      flex-direction: column;
    }

    .number {
        width: 100%;
        margin-bottom: 2%;
    }

    #work {
        margin-bottom: 40%;
    }

    h2 {
        line-height: 1;
    }

    .sideBlank {
        display: none;
    }

    .description, .video {
        width: 100%;
    }

    #masthead {
        padding: 0%;
        margin: 0%;
    }

    .point {
        margin-bottom: 30%;
    }

    .center {
        margin: 0%;
    }

    .point img {
        width: 50%;
    }

    .masthead1 {
        font-size: 18px;
    }

    .item {
        margin-bottom: 40%;
    }

    #showcaseWork {
        margin-top: 0px;
    }

    /* about.html */
    #aboutMe {   
        width: 100%;
        
        display: flex;
        flex-direction: column;
    }

    .aboutHeader {
        font-size: 18px;
    }
    
    /* case studies */
    .intro, #introDetails, #pageSection, .divide, .center {
        width: 100%;

        display: flex;
        flex-direction: column;
    }

    .tag {
        font-size: 10px;
    }

    .

    .center {
        margin: 0%;
    }

    .item1 {
        margin-bottom: 20%;
    }

    .sectionSubTextLong {
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    .sectionSubTextHalfNon, .sectionText, .sectionSubText, .sectionSubTextLong, .sectionSubTextHalf, .sectionSubTextHalfNon, .sectionText2 {
        width: 100%;
        margin: 0%;
        max-width: 100%;
    }

    .mobile video {
        width: 100%;
        margin-bottom: 20%;
    }

    .titleText, .sectionText, .sectionText2, .titleText, .introSubText {
        font-size: 18px;
    }

    .sectionText {
        margin-bottom: 20%;
    }

    .row {
        display: flex;
        flex-direction: column;
    }

    .row img {
        padding: 10%;
    }

    /* footer */
    #footer {
        width: 100%;

        display: flex;
        flex-direction: column;
    }

    .aboutWords {
        margin-left: 0%;
    }

    .connect {
        font-size: 14px;
        padding-bottom: 5%;
    }

    #media .icon img {
        padding-left: 0%;
        padding-right: 30px;
    }

    img {
        height: 100%;
    }

  }

